# Vinylly

./: .gitignore  .prettierignore  AGENTS.md  BUILDING.md  LICENSE.md  README.en.md  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit
apps/desktop/: package.json
apps/desktop/src/: noop.ts
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/scripts/: patch-appimage-egl.sh
apps/desktop/src-tauri/src/: db_json.rs  host_fs.rs  host_net.rs  host_paths.rs  lib.rs  main.rs
apps/web/: .env.example  i18next-parser.config.cjs  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
apps/web/src/: App.test.tsx  App.tsx  main.tsx  vite-env.d.ts
apps/web/src/components/: CoverImage.tsx  ExternalLink.tsx  Gallery.tsx  Layout.tsx  Onboarding.tsx  RightRail.tsx  ThemeToggle.test.tsx  ThemeToggle.tsx  Titlebar.tsx
apps/web/src/lib/: app-info.ts  db.ts  i18n.ts  import-export.test.ts  import-export.ts  kv.ts  locale-store.ts  providers.ts  queries.ts  settings-store.test.ts  settings-store.ts  theme.test.ts  theme.ts  ui-store.ts  (+1 more)
neumorphism/: SKILL.md  accordion.md  avatars.md  badges.md  borders.md  brand.md  button-group.md  buttons.md  cards.md  colors.md  content.md  dropdown.md  icon-shapes.md  inputs.md  layout.md  radios-checkboxes-toggle.md  radius.md  shadows.md  sidebars.md  tables.md  tooltips-popovers.md  typography.md
(+20 files in other folders)
