[package]
name = "vinylly"
version = "0.1.0"
description = "Vinylly desktop shell (Tauri 2.x)"
edition = "2021"
rust-version = "1.77"

[lib]
name = "vinylly_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
