[package]
name = "vinylly"
version = "0.1.0"
description = "Vinylly desktop shell (Tauri 2.x)"
edition = "2021"
rust-version = "1.77"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "vinylly_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "fs", "macros"] }
base64 = "0.22"
mime = "0.3"
open = "5"
